# interflop-backend-verrou

./: CMakeLists.txt  Makefile.am  README.md  dietzfelbingerHash.hxx  interflop_verrou.cxx  interflop_verrou.h  mersenneHash.hxx  multiplyShiftHash.hxx  static_backends.hxx  vr_isNan.hxx  vr_nextUlp.hxx  vr_op.hxx  vr_rand_implem.h  vr_roundingOp.hxx
x86_64/: interflop_vector_verrou.cxx  interflop_vector_verrou_avx.h  interflop_vector_verrou_avx512.h  interflop_vector_verrou_scalar.h  interflop_vector_verrou_sse.h  vr_areNan.hxx  vr_nextUlps.hxx  vr_vop.hxx  vr_vroundingOp.hxx
